# Cloud_cost

./: .gitignore  Dockerfile  README.md  app.py  app1.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
