[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cloud-cost-guardian"
version = "0.1.0"
description = "Cloud Cost Guardian AI - RL environment for optimizing cloud infrastructure costs"
requires-python = ">=3.8"
dependencies = [
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
