[project]
name = "cloud-cost-guardian"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "gradio",
    "matplotlib",
    "numpy",
    "pandas",
    "openai",
    "python-dotenv",
    "pydantic",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
